--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Android</string>
+    <string name="login_message">input your ID</string>
+    <string name="login">Login</string>
 </resources>
