--- a/Model/androi/app/src/main/res/values/strings.xml
+++ b/Model/androi/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
   <string name="tfe_pn_app_name" translation_description="Posenet demo app built with Posenet library [CHAR_LIMIT=40]">TFL Posenet</string>
   <string name="tfe_pn_request_permission" translation_description="Request camera permission [CHAR_LIMIT=40]">This app needs camera permission.</string>
   <string name="tfe_pn_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
+  <string name="login_message">input your ID</string>
+  <string name="login">Login</string>
+  <string name="friend_id">Friend ID :</string>
+  <string name="add_friend">Add Friend</string>
 </resources>
